fixed scrollbar hide with a library

--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,20 @@
     }
     .border-thin{
         /*  */
+        
         box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     }
-    .border-medium{
+    .border-md{
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    }
+    .border-lg{
         box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     }
-    .border-strong{
+    .border-xl{
         box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
+    }
+    .border-hover{
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     }
     .navBorder{
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
